Fix issues in footer

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="main pb-4 container px-0">
+    <div class="main pb-4 container-fluid px-0">
         <div class="container-fluid px-0">
             <nav class="navbar navbar-expand-lg fs-5 fw-semibold bg-transparent">
                 <div class="container">
@@ -64,6 +64,7 @@
                 </div>
             </nav>
 
+          <div class="container">
             <div class="row">
                 <div class="col head_content pb-4">
                     <div class="mt-5 active rounded ">
@@ -82,11 +83,12 @@
                     </div>
                 </div>
             </div>
+          </div>
 
         </div>
     </div>
-    <section class="section bg-white border-bottom pb-4 container">
-        <div class="container-fluid bg-white">
+    <section class="section bg-white border-bottom pb-4 container-fluid">
+        <div class="container bg-white">
             <div class="row text-white px-1 py-3 text-center">
                 <h5 class="tx-custom-black mt-1">Star Educationlal Society 2022</h5>
                 <hr class="hr">
@@ -125,7 +127,7 @@
         </div>
     </section>
 
-    <section class="container bg-custom-black">
+    <section class="container-fluid bg-custom-black">
         <div class="container py-5 d-md-none">
             <div class="row">
                 <div class="col text-center text-white">
@@ -142,15 +144,19 @@
                 <div class="col text-white m-1"><img src="assets/icons/airbnb.png" width="50" alt="airbnb"></div>
             </div>
         </div>
-        <div class="row footer">
-            <div class="col text-center pt-3">
-                <a class=" nav-link" href="#">Star<small class="active">Educational</small>Society</a>
-            </div>
-            <div class="col text-center pt-3">
-                <p class="tx-custom-black py-1 joinUs">Join us for difference</p>
+    </section>
+  <div class="container-fluid footer">
+    <div class="container">
+        <div class="row">
+                <div class="col text-center pt-3">
+                    <a class=" nav-link" href="#">Star<small class="active">Educational</small>Society</a>
+                </div>
+                <div class="col text-center pt-3">
+                    <p class="tx-custom-black py-1 joinUs">Join us for difference</p>
+                </div>
             </div>
         </div>
-    </section>
+  </div>
     <script src="about.js"></script>
 </body>
 
