--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
 <body>
     <div class="main pb-5 container-fluid px-0">
         <div class="container-fluid p-0">
+            <div class="container-fluid  bg-custom-black mini-nav">
+                <div class="container">
+                    <ul class="nav justify-content-end w-75 me-auto ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="https://www.facebook.com/stareducationalsocietyafg"><i
+                                    class="bi bi-facebook"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="#"><i
+                                    class="bi bi-twitter"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">English</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="http://www.star.edu.af" class="nav-link text-white">Mypage</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link text-white">Layout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <nav class="navbar navbar-expand-lg fs-5 fw-semibold bg-transparent">
                 <div class="container">
                     <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
@@ -62,20 +86,21 @@
                 </div>
             </nav>
 
-           <div class="container">
-            <div class="row">
-                <div class="col head_content">
-                    <div class="mt-5 active rounded ">
-                        <h6>"Hello! Sharing world"</h6>
-                        <div id="demo-text" class=" fw-bolder px-1 ">STAR EDUCATIONAL<br>SOCIETY 2022</div>
-                        <P class="tx-custom-black white-border fs-small px-2 py-2 mt-4 mb-4">Star Educational Society is
-                            a not-for-profit educational institute focused on providing access to qu</P>
-                        <h4 class="tx-custom-black fw-bolder ">2015.10.15(THU) ~ 16(FRI)</h4>
-                        <P class="tx-custom-black fs-small">@ National Museum of Korea, Art Center Nabi and more</P>
+            <div class="container">
+                <div class="row">
+                    <div class="col head_content">
+                        <div class="mt-5 active rounded ">
+                            <h6>"Hello! Sharing world"</h6>
+                            <div id="demo-text" class=" fw-bolder px-1 ">STAR EDUCATIONAL<br>SOCIETY 2022</div>
+                            <P class="tx-custom-black white-border fs-small px-2 py-2 mt-4 mb-4">Star Educational
+                                Society is
+                                a not-for-profit educational institute focused on providing access to qu</P>
+                            <h4 class="tx-custom-black fw-bolder ">2015.10.15(THU) ~ 16(FRI)</h4>
+                            <P class="tx-custom-black fs-small">@ National Museum of Korea, Art Center Nabi and more</P>
+                        </div>
                     </div>
                 </div>
             </div>
-           </div>
 
         </div>
     </div>
@@ -90,7 +115,7 @@
                 <div class="program">
                     <div class="program_item">
                         <div class="img_cover">
-                            <img src="assets/images/discoursew.png" width="40px" alt="">
+                            <img src="assets/images/discoursew.png" width="40px" alt="discoursew">
                         </div>
                         <div class="title">
                             <h6 class="tx-custom-color">Lecture</h6>
@@ -101,7 +126,7 @@
                     </div>
 
                     <div class="program_item">
-                        <div class="img_cover"><img src="assets/images/galery.png" width="40px" alt=""></div>
+                        <div class="img_cover"><img src="assets/images/galery.png" width="40px" alt="galery"></div>
                         <div class="title">
                             <h6 class="tx-custom-color">Gramar</h6>
                         </div>
@@ -111,7 +136,7 @@
                     </div>
 
                     <div class="program_item">
-                        <div class="img_cover"><img src="assets/images/interm.png" width="40px" alt=""></div>
+                        <div class="img_cover"><img src="assets/images/interm.png" width="40px" alt="interm"></div>
                         <div class="title">
                             <h6 class="tx-custom-color">Dictation</h6>
                         </div>
@@ -121,7 +146,8 @@
                     </div>
 
                     <div class="program_item">
-                        <div class="img_cover"><img src="assets/images/discoursew.png" width="40px" alt=""></div>
+                        <div class="img_cover"><img src="assets/images/discoursew.png" width="40px" alt="discoursew">
+                        </div>
                         <div class="title">
                             <h6 class="tx-custom-color">Topic</h6>
                         </div>
@@ -131,7 +157,8 @@
                     </div>
 
                     <div class="program_item">
-                        <div class="img_cover"><img src="assets/images/discourse.png" width="40px" alt=""></div>
+                        <div class="img_cover"><img src="assets/images/discourse.png" width="40px" alt="discourse">
+                        </div>
                         <div class="title">
                             <h6 class="tx-custom-color">Quiz</h6>
                         </div>
@@ -170,12 +197,16 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col text-white m-1"><a href="#"><img src="assets/icons/mozilla.png" width="80" alt="mozilla"></a></div>
-                <div class="col text-white m-1"><a href="#"><img src="assets/icons/googlekorea.png" width="80" alt="google"></a></div>
-                <div class="col text-white m-1"><a href="#"><img src="assets/icons/naver.png" width="80" alt="naver"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/mozilla.png" width="80"
+                            alt="mozilla"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/googlekorea.png" width="80"
+                            alt="google"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/naver.png" width="80"
+                            alt="naver"></a></div>
                 <div class="col text-white m-1"><a href="#"><img src="assets/icons/daumkakaologo.png" width="80"
-                    alt="daumkakaologo"></a></div>
-                <div class="col text-white m-1"><a href="#"><img src="assets/icons/airbnb.png" width="80" alt="airbnb"></a></div>
+                            alt="daumkakaologo"></a></div>
+                <div class="col text-white m-1"><a href="#"><img src="assets/icons/airbnb.png" width="80"
+                            alt="airbnb"></a></div>
             </div>
         </div>
     </section>
@@ -188,7 +219,7 @@
                 <p class="tx-custom-black py-1 joinUs">Join us for difference</p>
             </div>
         </div>
-      </div>
+    </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
